feat: improve secret management
